# telegram-sendmail

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  telegram-sendmail.ini.example
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  labeler.yml  normalize-issue.yml  pre-commit-autoupdate.yml  pypi.yml  release.yml  title-check.yml
docs/: SUMMARY.md  USER_GUIDE.md
docs/pypi/: README.md
scripts/: module_coverage.py
src/telegram_sendmail/: __init__.py  __main__.py  client.py  config.py  exceptions.py  parser.py  py.typed  smtp.py  spool.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_main.py  test_parser.py  test_smtp.py  test_spool.py
